@@ -34,10 +34,10 @@ public class Security {
     logger = Logger.getLogger(this.getClass().getPackage().getName());
 
     
-    /*
+    
 	connected = true;
 	return ;
-    */
+    /*
     
      
 	InputStreamReader reader = new InputStreamReader(System.in);
