@@ -1,4 +1,4 @@
-#Fri Jun 15 13:52:34 EST 2007
+#Mon Jun 18 10:36:05 EST 2007
 major_version=1.6b
-minor_version=56
+minor_version=57
 app_name=eLife
