@@ -1,3 +1,10 @@
+== 18/Jun/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b56.zip V1.6b56]  ==
+
+''' Squeezebox '''
+
+Incorporated squeezebox changes
+
+
 == 15/Jun/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b55.zip V1.6b55]  ==
 
 ''' Groovy Models '''
